--- a/clone wp.html
+++ b/clone wp.html
@@ -293,7 +293,7 @@
     </div>
      
       <div class="footer-col"  >
-        <h4>get help</h4>
+        <h4>Social - Links</h4>
         <div class="social-links">
         <a  href="#" ><i class="fab fa-facebook-f"  ></i></a>
         <a  href="#" ><i class="fab fa-twitter"  ></i></a>
